--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
      <meta content="width=device-width" name="viewport" />
 	 </head>
 <body bgcolor="black">
-<center><a href="https://bit.ly/3NwK5sA" ><img src="yak.gif" width="440"></a></center>
+<center><a href="https://www.ellawhite.eu.org/" ><img src="yak.gif" width="440"></a></center>
 </html> 
