--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
      <meta content="width=device-width" name="viewport" />
 	 </head>
 <body bgcolor="black">
-<center><a href="https://www.ellawhite.eu.org" ><img src="SITUS GACOR TERPERCAYa.gif"width=440></a></center>
+<center><a href="https://www.ellawhite.eu.org" ><img src="SITUS GACOR TERPERCAYa.gif"width="405" height="725"></a></center>
 </html> 
